# lets-network

./: .gitignore  Cargo.toml  Changelog.md  README.md
.github/workflows/: app-to-ft.yml  template-to-ft.yml  www-to-ft.yml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/handlers/: hello_world.rs
lets-network-template.fifthtry.site/: FASTN.ftd  index.ftd
lets-network.fifthtry-community.com/: FASTN.ftd  index.ftd
lets-network.fifthtry-community.com/design/: index.ftd  initial-prompts.ftd  schema.ftd
lets-network.fifthtry.site/: FASTN.ftd  index.ftd
lets-network.fifthtry.site/storybook/: feed.ftd  index.ftd  others.ftd  self.ftd
lets-network.fifthtry.site/ui/: feed.ftd  page.ftd  self.ftd
scripts/: auto.sh  build-wasm.sh  optimise-wasm.sh  publish-app.sh
sdk/: Cargo.toml
sdk/src/: lib.rs
