[workspace]
members = ["backend", "sdk"]
resolver = "2"


[profile.release]
lto = true
opt-level = 's'

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Siddhant Kumar <siddhant@fifthtry.com>",
]
edition = "2024"
description = "lets-network - sdk for lets-network app"
license = "MIT"
repository = "https://github.com/fifthtry-community/lets-network"
homepage = "https://github.com/fifthtry-community/lets-network"


[workspace.dependencies]
ft-sdk = { version = "0.4.1", features = ["sqlite-default", "auth-provider", "field-extractors"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
